# pc_price_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily_ingest.yml
pc_price_pipeline/: definitions.py  jobs.py
pc_price_pipeline/assets/: store_bigquery.py
pc_price_pipeline/assets/common/: bigquery_write.py  cleaned_prices.py  schemas.py  utils.py
pc_price_pipeline/assets/cpu/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/assets/gpu/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/assets/memory/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/assets/mobo/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/assets/psu/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/assets/storage/: cleaned.py  enriched.py  normalize.py  raw.py
pc_price_pipeline/scrapers/: newegg.py
pc_price_pipeline_tests/: test_cpu_enrichment.py  test_gpu_enrichment.py  test_memory_enrichment.py  test_mobo_enrichment.py  test_newegg_scraper.py  test_product_id.py  test_psu_enrichment.py  test_schemas.py  test_storage_enrichment.py
pc_price_pipeline_tests/test_assets/: newegg_amd_motherboards.html
