[project]
name = "pc_price_pipeline"
version = "0.1.0"
description = "A Dagster pipeline for scraping and processing PC component pricing data from retailers"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "pandas",
    "pandas-gbq",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pc_price_pipeline.definitions"
code_location_name = "pc_price_pipeline"

[tool.pytest.ini_options]
testpaths = ["pc_price_pipeline_tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.packages.find]
exclude = ["pc_price_pipeline_tests", "pc_price_pipeline_tests.*"]
